<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context="com.project.yuvraj.PaymentPage">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/delivery_details"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.project.yuvraj.view.CustomTextView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/pointer"
                    android:textColor="@color/subik" />

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/del" />


            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <ImageView
                        android:id="@+id/edit_address"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="end"
                        android:src="@android:drawable/ic_menu_edit" />

                    <TextView
                        android:id="@+id/delAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="Delivery"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <TextView

                                android:id="@+id/delCity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=" Cart Total"
                                android:textStyle="bold" />


                        </RelativeLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" - "
                            android:textStyle="bold" />

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/delPincode"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=" Cart Total"
                                android:textStyle="bold" />

                        </RelativeLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="10dp" />

                        <TextView
                            android:id="@+id/delName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" Name "
                            android:textColor="@color/colorDivider" />

                        <TextView
                            android:id="@+id/delPhone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" Phone "
                            android:textColor="@color/colorDivider" />
                    </LinearLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/pay"
                        android:textStyle="italic|bold" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="20dp">

                        <ImageView
                            android:id="@+id/imageRs"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/inr" />

                        <TextView
                            android:id="@+id/displayPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@+id/imageRs"
                            android:layout_toRightOf="@+id/imageRs"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="20sp"
                            android:textStyle="bold|italic" />
                    </RelativeLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Payment Option"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cod"
                    android:textSize="20sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <CheckBox
                    android:id="@+id/checkboxCod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingEnd="1dp"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:paddingRight="1dp"
                    android:checked="true"/>

            </RelativeLayout>

        </LinearLayout>


        <LinearLayout
            style="@android:style/ButtonBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="horizontal"
            android:padding="10dp">


            <Button
                style="@style/Btn"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical|end"
                android:layout_weight="1"
                android:onClick="placeOrder"
                android:text="@string/placeOrder"
                android:textStyle="italic"/>
        </LinearLayout>


    </LinearLayout>

</ScrollView>
